VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc5Up.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [64MB/455.1MB][ 14%][=======>                                          ][21.33MB/s]  [120MB/455.1MB][ 26%][=============>                                    ][30MB/s]  [168MB/455.1MB][ 36%][==================>                               ][33.6MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][38.67MB/s]  [288MB/455.1MB][ 63%][===============================>                  ][41.14MB/s]  [344MB/455.1MB][ 75%][=====================================>            ][43MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][43.56MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][42.4MB/s]  [448MB/455.1MB][ 98%][=================================================>][40.73MB/s]  [455.1MB/455.1MB][100%][==================================================][41.37MB/s]  [455.1MB/455.1MB][100%][==================================================][41.37MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_36631/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_36631/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
